Improve added button transition on dishcards

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -29,8 +29,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Tartare de poulpe acidulé</span>
-          <span class="dishcard__infos">Aux zestes d'orange</span>
+          <span class="dishcard__text dishcard__text--heading">Tartare de poulpe acidulé</span>
+          <span class="dishcard__text">Aux zestes d'orange</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">25€</span>
@@ -40,8 +40,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Velouté de légumes d'antan</span>
-          <span class="dishcard__infos">Carotte, panais, topinambour</span>
+          <span class="dishcard__text dishcard__text--heading">Velouté de légumes d'antan</span>
+          <span class="dishcard__text">Carotte, panais, topinambour</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
@@ -51,8 +51,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Soupe à l'oignon</span>
-          <span class="dishcard__infos">Revisitée</span>
+          <span class="dishcard__text dishcard__text--heading">Soupe à l'oignon</span>
+          <span class="dishcard__text">Revisitée</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">20€</span>
@@ -69,8 +69,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Coquilles Saint-Jacques</span>
-          <span class="dishcard__infos">Accompagnées d'une purée de panais</span>
+          <span class="dishcard__text dishcard__text--heading">Coquilles Saint-Jacques</span>
+          <span class="dishcard__text">Accompagnées d'une purée de panais</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">40€</span>
@@ -80,8 +80,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Magret de canard</span>
-          <span class="dishcard__infos">Et parmentier de pommes de terre</span>
+          <span class="dishcard__text dishcard__text--heading">Magret de canard</span>
+          <span class="dishcard__text">Et parmentier de pommes de terre</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
@@ -91,8 +91,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Pigeonneau d’Ille-et-Vilaine</span>
-          <span class="dishcard__infos">Sur son lit de gnocchis aux légumes</span>
+          <span class="dishcard__text dishcard__text--heading">Pigeonneau d’Ille-et-Vilaine</span>
+          <span class="dishcard__text">Sur son lit de gnocchis aux légumes</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">44€</span>
@@ -109,8 +109,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Pétales de violettes glacés</span>
-          <span class="dishcard__infos">Et purée de noisettes</span>
+          <span class="dishcard__text dishcard__text--heading">Pétales de violettes glacés</span>
+          <span class="dishcard__text">Et purée de noisettes</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">18€</span>
@@ -120,8 +120,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Fondant au chocolat</span>
-          <span class="dishcard__infos">Revisité</span>
+          <span class="dishcard__text dishcard__text--heading">Fondant au chocolat</span>
+          <span class="dishcard__text">Revisité</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">22€</span>
@@ -131,8 +131,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Millefeuille croustillant</span>
-          <span class="dishcard__infos">Myrtilles et pâte d’amande</span>
+          <span class="dishcard__text dishcard__text--heading">Millefeuille croustillant</span>
+          <span class="dishcard__text">Myrtilles et pâte d’amande</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">23€</span>
