--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -29,8 +29,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Tartare de thon</span>
-          <span class="dishcard__infos">Assaisonné au yuzu</span>
+          <span class="dishcard__text dishcard__text--heading">Tartare de thon</span>
+          <span class="dishcard__text">Assaisonné au yuzu</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">25€</span>
@@ -40,8 +40,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Bouchée de homard croustillant</span>
-          <span class="dishcard__infos">Et sa farandole de petits légumes</span>
+          <span class="dishcard__text dishcard__text--heading">Bouchée de homard croustillant</span>
+          <span class="dishcard__text">Et sa farandole de petits légumes</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
@@ -51,8 +51,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Velouté de cèpes</span>
-          <span class="dishcard__infos">Aux truffes</span>
+          <span class="dishcard__text dishcard__text--heading">Velouté de cèpes</span>
+          <span class="dishcard__text">Aux truffes</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">20€</span>
@@ -69,8 +69,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Poulet rôti aux herbes de Provence</span>
-          <span class="dishcard__infos">Et sa crème de truffe</span>
+          <span class="dishcard__text dishcard__text--heading">Poulet rôti aux herbes de Provence</span>
+          <span class="dishcard__text">Et sa crème de truffe</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">40€</span>
@@ -80,8 +80,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Langouste rôtie</span>
-          <span class="dishcard__infos">Et ses légumes de saison</span>
+          <span class="dishcard__text dishcard__text--heading">Langouste rôtie</span>
+          <span class="dishcard__text">Et ses légumes de saison</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
@@ -91,8 +91,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Côte de boeuf Angus</span>
-          <span class="dishcard__infos">Et sa purée de panais</span>
+          <span class="dishcard__text dishcard__text--heading">Côte de boeuf Angus</span>
+          <span class="dishcard__text">Et sa purée de panais</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">44€</span>
@@ -109,8 +109,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Farandole de desserts</span>
-          <span class="dishcard__infos">Du chef</span>
+          <span class="dishcard__text dishcard__text--heading">Farandole de desserts</span>
+          <span class="dishcard__text">Du chef</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">18€</span>
@@ -120,8 +120,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Crème brulée</span>
-          <span class="dishcard__infos">Revisitée</span>
+          <span class="dishcard__text dishcard__text--heading">Crème brulée</span>
+          <span class="dishcard__text">Revisitée</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">22€</span>
@@ -131,8 +131,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Tiramisu</span>
-          <span class="dishcard__infos">À la noisette</span>
+          <span class="dishcard__text dishcard__text--heading">Tiramisu</span>
+          <span class="dishcard__text">À la noisette</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">23€</span>
