--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -29,8 +29,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Ravioles de foie gras</span>
-          <span class="dishcard__infos">Accompagnés de leur crème à la truffe</span>
+          <span class="dishcard__text dishcard__text--heading">Ravioles de foie gras</span>
+          <span class="dishcard__text">Accompagnés de leur crème à la truffe</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">25€</span>
@@ -40,8 +40,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Caviar osciètre</span>
-          <span class="dishcard__infos">Sur blini à la farine de blé noir</span>
+          <span class="dishcard__text dishcard__text--heading">Caviar osciètre</span>
+          <span class="dishcard__text">Sur blini à la farine de blé noir</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
@@ -51,8 +51,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Homard et espuma de potiron</span>
-          <span class="dishcard__infos">Mariné aux zestes d'orange</span>
+          <span class="dishcard__text dishcard__text--heading">Homard et espuma de potiron</span>
+          <span class="dishcard__text">Mariné aux zestes d'orange</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">20€</span>
@@ -62,8 +62,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Foie gras de canard cuit entier</span>
-          <span class="dishcard__infos">Confiture de figue et pain toasté</span>
+          <span class="dishcard__text dishcard__text--heading">Foie gras de canard cuit entier</span>
+          <span class="dishcard__text">Confiture de figue et pain toasté</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
@@ -80,8 +80,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Noix de coquilles Saint-Jacques</span>
-          <span class="dishcard__infos">Sur lit de purée de céleri-rave</span>
+          <span class="dishcard__text dishcard__text--heading">Noix de coquilles Saint-Jacques</span>
+          <span class="dishcard__text">Sur lit de purée de céleri-rave</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">40€</span>
@@ -91,8 +91,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Langoustine poêlée</span>
-          <span class="dishcard__infos">Purée de patate douce</span>
+          <span class="dishcard__text dishcard__text--heading">Langoustine poêlée</span>
+          <span class="dishcard__text">Purée de patate douce</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
@@ -102,8 +102,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Mijoté de queue de boeuf</span>
-          <span class="dishcard__infos">Et riz sauvage aux zestes de citron</span>
+          <span class="dishcard__text dishcard__text--heading">Mijoté de queue de boeuf</span>
+          <span class="dishcard__text">Et riz sauvage aux zestes de citron</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">44€</span>
@@ -120,8 +120,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Macaron noisette et chocolat</span>
-          <span class="dishcard__infos">Glace au caramel brun et sel de Guérande</span>
+          <span class="dishcard__text dishcard__text--heading">Macaron noisette et chocolat</span>
+          <span class="dishcard__text">Glace au caramel brun et sel de Guérande</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">18€</span>
@@ -131,8 +131,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Baba au rhum revisité</span>
-          <span class="dishcard__infos">Avec son coulis de citron</span>
+          <span class="dishcard__text dishcard__text--heading">Baba au rhum revisité</span>
+          <span class="dishcard__text">Avec son coulis de citron</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">22€</span>
@@ -142,8 +142,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Tarte au citron meringuée</span>
-          <span class="dishcard__infos">Déstructurée</span>
+          <span class="dishcard__text dishcard__text--heading">Tarte au citron meringuée</span>
+          <span class="dishcard__text">Déstructurée</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">23€</span>
