--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -29,8 +29,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Fricassée d'escargot</span>
-          <span class="dishcard__infos">Au piment d'espelette</span>
+          <span class="dishcard__text dishcard__text--heading">Fricassée d'escargot</span>
+          <span class="dishcard__text">Au piment d'espelette</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">25€</span>
@@ -40,8 +40,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Foie gras de canard mi-cuit</span>
-          <span class="dishcard__infos">Et ses copeaux de truffe noire</span>
+          <span class="dishcard__text dishcard__text--heading">Foie gras de canard mi-cuit</span>
+          <span class="dishcard__text">Et ses copeaux de truffe noire</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
@@ -51,8 +51,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Oeuf au plat</span>
-          <span class="dishcard__infos">Assaisonné à la truffe sur lit de caviar</span>
+          <span class="dishcard__text dishcard__text--heading">Oeuf au plat</span>
+          <span class="dishcard__text">Assaisonné à la truffe sur lit de caviar</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">20€</span>
@@ -69,8 +69,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Filet de boeuf aux herbes</span>
-          <span class="dishcard__infos">Accompagné de sa ribambelle de légumes</span>
+          <span class="dishcard__text dishcard__text--heading">Filet de boeuf aux herbes</span>
+          <span class="dishcard__text">Accompagné de sa ribambelle de légumes</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">40€</span>
@@ -80,8 +80,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Parmentier de queue de boeuf</span>
-          <span class="dishcard__infos">À la truffe noire sur sa purée de panais</span>
+          <span class="dishcard__text dishcard__text--heading">Parmentier de queue de boeuf</span>
+          <span class="dishcard__text">À la truffe noire sur sa purée de panais</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
@@ -91,8 +91,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Filet de turbot</span>
-          <span class="dishcard__infos">Aux agrumes</span>
+          <span class="dishcard__text dishcard__text--heading">Filet de turbot</span>
+          <span class="dishcard__text">Aux agrumes</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">44€</span>
@@ -109,8 +109,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Paris-Brest</span>
-          <span class="dishcard__infos">Revisité</span>
+          <span class="dishcard__text dishcard__text--heading">Paris-Brest</span>
+          <span class="dishcard__text">Revisité</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">18€</span>
@@ -120,8 +120,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Macaron au chocolat d'exception</span>
-          <span class="dishcard__infos">Et glace à la vanille de Madagascar</span>
+          <span class="dishcard__text dishcard__text--heading">Macaron au chocolat d'exception</span>
+          <span class="dishcard__text">Et glace à la vanille de Madagascar</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">22€</span>
@@ -131,8 +131,8 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__heading">Mousse au chocolat</span>
-          <span class="dishcard__infos">Au piment d'Espelette et à la truffe noire</span>
+          <span class="dishcard__text dishcard__text--heading">Mousse au chocolat</span>
+          <span class="dishcard__text">Au piment d'Espelette et à la truffe noire</span>
         </span>
         <span class="dishcard__r-container">
           <span class="dishcard__price">23€</span>
