Add some mixins to improve scss files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <section class="section section--alt">
     <h2 class="section__heading section__heading--home">Fonctionnement</h2>
-    <div class="flex flex--responsive-columns">
+    <div class="operation__container">
       <div class="operation">
         <div class="operation__number">1</div>
         <i class="operation__icon fas fa-mobile-alt"></i>
@@ -56,7 +56,7 @@
 
   <section class="section">
     <h2 id="restaurants" class="section__heading section__heading--home">Restaurants</h2>
-    <div class="grid -flex -flex--restaurants">
+    <div class="card__container">
       <div class="card card--new">
         <div class="card__picture">
           <a href="la-palette-du-gout.html" class="card__link"></a>
