Clean and improve all files

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -22,9 +22,9 @@
     </div>
   </div>
 
-  <section class="section section--menu">
-    <div class="loading-block loading-block--1">
-      <h2 class="section__heading section__heading--menu">Entrées</h2>
+  <section class="section-menu">
+    <div class="dishcard__block dishcard__block--1">
+      <h2 class="section-menu__heading">Entrées</h2>
 
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
@@ -62,9 +62,9 @@
     </div>
   </section>
 
-  <section class="section section--menu section--menu--2">
-    <div class="loading-block loading-block--2">
-      <h2 class="section__heading section__heading--menu">Plats</h2>
+  <section class="section-menu">
+    <div class="dishcard__block dishcard__block--2">
+      <h2 class="section-menu__heading">Plats</h2>
 
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
@@ -102,9 +102,9 @@
     </div>
   </section>
 
-  <section class="section section--menu section--menu--3">
-    <div class="loading-block loading-block--3">
-      <h2 class="section__heading section__heading--menu">Desserts</h2>
+  <section class="section-menu">
+    <div class="dishcard__block dishcard__block--3">
+      <h2 class="section-menu__heading">Desserts</h2>
 
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
