--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <input type="text" id="location" class="search__input" value="Paris, Belleville" />
   </div>
 
-  <section class="section section--centered section">
-    <h2 class="section__heading section__heading--explore">Réservez le menu qui vous convient</h2>
-    <p class="section__p">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+  <section class="section-home section-home--centered">
+    <h2 class="section-home__heading section-home__heading--explore">Réservez le menu qui vous convient</h2>
+    <p class="section-home__p">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
     <a href="#restaurants" class="btn">Explorer nos restaurants</a>
   </section>
 
-  <section class="section section--alt">
-    <h2 class="section__heading section__heading--home">Fonctionnement</h2>
+  <section class="section-home section-home--alt">
+    <h2 class="section-home__heading section-home__heading--centered">Fonctionnement</h2>
     <div class="operation__container">
       <div class="operation">
         <div class="operation__number">1</div>
@@ -54,8 +54,8 @@
     </div>
   </section>
 
-  <section class="section">
-    <h2 id="restaurants" class="section__heading section__heading--home">Restaurants</h2>
+  <section class="section-home">
+    <h2 id="restaurants" class="section-home__heading section-home__heading--centered">Restaurants</h2>
     <div class="card__container">
       <div class="card card--new">
         <div class="card__picture">
